test_regress/t/t_assert_future_unsup.out
%Error-UNSUPPORTED: t/t_assert_future_unsup.v:19:54: Unsupported/illegal: Future value function used with expression with operator FUNCREF 'func'
                                                   : ... note: In instance 't'
   19 |   assert property (@(posedge clk) $future_gclk(a) == func(a));
      |                                                      ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
